--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,50 +1,39 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
-
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# This is a basic workflow to help you get started with Actions
+name: CI
+# Controls when the action will run. 
 on:
-  # Runs on pushes targeting the default branch
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+# Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
-  # Single deploy job since we're just deploying
+  # This workflow contains a single job called "build"
   deploy:
-    env:
-      HOST: ${{secrets.bb5qeieo5qjjnhmuo8mf-mysql.services.clever-cloud.com }}
-      DATABASE_USER: ${{secrets.ufip9t18tynhohn5}}
-      PASSWORD: ${{secrets.rq0k23Z8dIZY8u0nexf8}}
-      DATABASE: ${{secrets.bb5qeieo5qjjnhmuo8mf}}
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }},
-      
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy: 
+        matrix:
+            node-version: [12.x]
+# Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v1
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@main
-        
+            node-version: ${{ matrix.node-version }}
+# Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+# Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
